@@ -24,3 +24,4 @@ m4_include([ostree.at])
 m4_include([containers.at])
 m4_include([strict-usernames.at])
 m4_include([bound-passphrase.at])
+m4_include([bound-passphrase-tpm.at])
